[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://game/scenes/menus/PauseMenu.gd" id="1_pause_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.1, 0.15, 0.92)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.25, 0.3, 0.4, 0.6)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
visible = false
script = ExtResource("1_pause_script")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -200.0
offset_right = 240.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Content" type="VBoxContainer" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="Title" type="Label" parent="Panel/Content"]
layout_mode = 2
text = "Juego en pausa"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="Subtitle" type="Label" parent="Panel/Content"]
layout_mode = 2
text = "Toma un respiro, h√©roe"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="Spacing" type="Control" parent="Panel/Content"]
layout_mode = 2
size_flags_vertical = 2
custom_minimum_size = Vector2(0, 10)

[node name="ResumeButton" type="Button" parent="Panel/Content"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "‚ñ∂ Continuar"

[node name="SettingsButton" type="Button" parent="Panel/Content"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "‚öô Configuraci√≥n"

[node name="MainMenuButton" type="Button" parent="Panel/Content"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "üè† Volver al men√∫"

[node name="QuitButton" type="Button" parent="Panel/Content"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "‚úï Salir del juego"
